--- a/assets/html/quiz.html
+++ b/assets/html/quiz.html
@@ -6,11 +6,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-  <title>Bootstrap 101 Template</title>
+  <title>Mulher e Sociedade</title>
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <!-- CSS -->
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -24,7 +27,7 @@
 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Navbar</a>
+            <a class="navbar-brand" href="#">Mulher e Sociedade</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation">
@@ -68,75 +71,34 @@
 
         <!-- Inicio Main -->
 
-        <!-- Inicio Carrosel -->
 
-        <div id="carouselExampleCaptions" class="carousel slide">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img src="..." class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>First slide label</h5>
-                <p>Some representative placeholder content for the first slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Second slide label</h5>
-                <p>Some representative placeholder content for the second slide.</p>
-              </div>
-            </div>
-            <div class="carousel-item">
-              <img src="..." class="d-block w-100" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Third slide label</h5>
-                <p>Some representative placeholder content for the third slide.</p>
-              </div>
-            </div>
-          </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-
-        <!-- Fim Carrosel -->
 
         <!-- Inicio Informações -->
 
         <section id="contato" class="py-5">
           <div class="container">
-              <div class="row justify-content-between">
-                  <div class="col-md-6">
-                      <p class="mb-0">Participantes:</p>
-                      <ul class="list-unstyled">
-                          <li>Wendell Dorta</li>
-                          <li>Ricardo Ariel</li>
-                          <li>Vitor Gomes</li>
-                          <li>Anderson Thiago</li>
-                          <!-- Adicione mais itens conforme necessário -->
-                      </ul>
-                  </div>
-                  <div class="col-md-6">
-                      <p class="mb-0">EE Fadlo Haidar</p>
-                      <p class="mb-0">mês, 2024</p>
-                      <p class="mb-0">São Paulo</p>
-                      <p class="mb-0">3º ano B</p>                       
-                      <p class="mb-0">Professor Orientador: Marcio</p>
-                  </div>
+            <div class="row justify-content-between">
+              <div class="col-md-6">
+                <p class="mb-0">Participantes:</p>
+                <ul class="list-unstyled">
+                  <li>Wendell Dorta</li>
+                  <li>Ricardo Ariel</li>
+                  <li>Vitor Gomes</li>
+                  <li>Anderson Thiago</li>
+                  <!-- Adicione mais itens conforme necessário -->
+                </ul>
               </div>
+              <div class="col-md-6">
+                <p class="mb-0">EE Fadlo Haidar</p>
+                <p class="mb-0">mês, 2024</p>
+                <p class="mb-0">São Paulo</p>
+                <p class="mb-0">3º ano B</p>
+                <p class="mb-0">Professor Orientador: Marcio</p>
+              </div>
+            </div>
           </div>
-      </section>
-      <!-- Fim Informações -->
+        </section>
+        <!-- Fim Informações -->
 
         <!-- Fim Main -->
 
@@ -144,9 +106,9 @@
 
         <footer class="bg-dark text-light py-4">
           <div class="container text-center">
-              <p>&copy; Todos os direitos reservados.</p>
+            <p>&copy; Todos os direitos reservados.</p>
           </div>
-      </footer>
+        </footer>
 
         <!-- Fim footer -->
 
