--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dia das Mulheres</title>
+    <title>Mulher e Sociedade</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         /* Estilos personalizados podem ser adicionados aqui */
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Dia das Mulheres</a>
+                <a class="navbar-brand" href="#">Mulher e Sociedade</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -38,6 +38,41 @@
     </header>
 
     <main>
+        <!-- Inicio Carrosel -->
+
+        <div id="carouselExampleCaptions" class="carousel slide">
+            <div class="carousel-indicators">
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                    aria-current="true" aria-label="Slide 1"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                    aria-label="Slide 2"></button>
+                <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                    aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="assets/img/img1.jpg" class="d-block w-100 carrosel-img" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/img2.jpg" class="d-block w-100 carrosel-img" alt="...">
+                </div>
+                <div class="carousel-item">
+                    <img src="assets/img/img3.jpg" class="d-block w-100 carrosel-img" alt="...">
+                </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+                data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+            </button>
+        </div>
+
+        <!-- Fim Carrosel -->
         <section id="sobre" class="py-5">
             <div class="container">
                 <h2 class="mb-4">Sobre o Dia das Mulheres</h2>
@@ -100,7 +135,6 @@
             </div>
         </section>
 
-
         <section id="contato" class="py-5">
             <div class="container">
                 <div class="row justify-content-between">
@@ -118,7 +152,7 @@
                         <p class="mb-0">EE Fadlo Haidar</p>
                         <p class="mb-0">mês, 2024</p>
                         <p class="mb-0">São Paulo</p>
-                        <p class="mb-0">3º ano B</p>                       
+                        <p class="mb-0">3º ano B</p>
                         <p class="mb-0">Professor Orientador: Marcio</p>
                     </div>
                 </div>
