--- a/assets/html/quiz.html
+++ b/assets/html/quiz.html
@@ -12,8 +12,8 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <!-- CSS -->
-    <link rel="stylesheet" href="../css/style.css">
+  <!-- CSS -->
+  <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
@@ -23,11 +23,9 @@
     <div class="row">
       <div class="col-md-12">
 
-        <!-- Inicio Nav -->
-
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
           <div class="container-fluid">
-            <a class="navbar-brand" href="#">Mulher e Sociedade</a>
+            <a class="navbar-brand" href="#">Navbar</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
               data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
               aria-label="Toggle navigation">
@@ -59,58 +57,33 @@
                   <a class="nav-link disabled" aria-disabled="true">Disabled</a>
                 </li>
               </ul>
-              <form class="d-flex" role="search">
-                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success" type="submit">Search</button>
-              </form>
+              <li class="nav-item dropdown">
+                <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
+                  aria-expanded="false">
+                  Dropdown
+                </a>
+                <ul class="dropdown-menu">
+                  <form>
+                    <div class="mb-3">
+                      <label for="exampleInputEmail1" class="form-label">Email address</label>
+                      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+                    </div>
+                    <div class="mb-3">
+                      <label for="exampleInputPassword1" class="form-label">Password</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1">
+                    </div>
+                    <div class="mb-3 form-check">
+                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
+                      <label class="form-check-label" for="exampleCheck1">Check me out</label>
+                    </div>
+                    <button type="submit" class="btn btn-primary">Submit</button>
+                  </form>
+                </ul>
+              </li>
             </div>
           </div>
         </nav>
-
-        <!-- Fim Nav -->
-
-        <!-- Inicio Main -->
-
-
-
-        <!-- Inicio Informações -->
-
-        <section id="contato" class="py-5">
-          <div class="container">
-            <div class="row justify-content-between">
-              <div class="col-md-6">
-                <p class="mb-0">Participantes:</p>
-                <ul class="list-unstyled">
-                  <li>Wendell Dorta</li>
-                  <li>Ricardo Ariel</li>
-                  <li>Vitor Gomes</li>
-                  <li>Anderson Thiago</li>
-                  <!-- Adicione mais itens conforme necessário -->
-                </ul>
-              </div>
-              <div class="col-md-6">
-                <p class="mb-0">EE Fadlo Haidar</p>
-                <p class="mb-0">mês, 2024</p>
-                <p class="mb-0">São Paulo</p>
-                <p class="mb-0">3º ano B</p>
-                <p class="mb-0">Professor Orientador: Marcio</p>
-              </div>
-            </div>
-          </div>
-        </section>
-        <!-- Fim Informações -->
-
-        <!-- Fim Main -->
-
-        <!-- Inicio footer -->
-
-        <footer class="bg-dark text-light py-4">
-          <div class="container text-center">
-            <p>&copy; Todos os direitos reservados.</p>
-          </div>
-        </footer>
-
-        <!-- Fim footer -->
 
       </div>
     </div>
