Mudança de poucas coisas

--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                                     <div class="card h-100">
                                         <img src="mulher1.jpg" class="card-img-top" style="height: 200px;" alt="...">
                                         <div class="card-body">
-                                            <h5 class="card-title">Nome da Mulher Destaque 1</h5>
+                                            <h5 class="card-title">Marie Curie</h5>
                                             <p class="card-text">Marie Curie (1867-1934) foi uma física e química
                                                 polonesa-francesa que se tornou a primeira mulher a receber um Prêmio
                                                 Nobel, em 1903, por suas descobertas sobre o radio. Ela foi a primeira
@@ -161,7 +161,7 @@
                         <p class="mb-0">Participantes:</p>
                         <ul class="list-unstyled">
                             <li>Wendell Dorta</li>
-                            <li>Ricardo Ariel</li>
+                            <li>Ricardo Colombo</li>
                             <li>Vitor Gomes</li>
                             <li>Anderson Thiago</li>
                             <!-- Adicione mais itens conforme necessário -->
