--- a/assets/html/quiz.html
+++ b/assets/html/quiz.html
@@ -15,8 +15,8 @@
 
 <body id="page-home">
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12">
+    <div class="row justify-content-center">
+      <div class="col-md-8">
         <div id="loader"></div>
         <!-- start Quiz button -->
         <div class="start_btn text-center">
