Mudei o css e testei as questões de resto eu tento arrumar dps perdi a paciencia kk

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
                             <li>Ricardo Colombo</li>
                             <li>Vitor Gomes</li>
                             <li>Anderson Thiago</li>
+                            <li>Samuel Pareira</li>
                             <!-- Adicione mais itens conforme necessário -->
                         </ul>
                     </div>
