--- a/assets/html/end.html
+++ b/assets/html/end.html
@@ -8,7 +8,8 @@
     <title>Parabens!</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
-  <body>
+  <body  style="background-color: #010101"></body>>
+    
     <div class="container">
       <div id="end" class="flex-center flex-column">
         <h1 id="finalScore"></h1>
@@ -29,7 +30,7 @@
             Salvar
           </button>
         </form>
-        <a id="go_home" class="btn" href="/">Ir para a Home</a>
+        <a id="go_home" class="btn" href="/">Home</a>
       </div>
     </div>
     <script src="../js/end.js"></script>
