Descrição clara das mudanças realizadas

--- a/index.html
+++ b/index.html
@@ -105,10 +105,12 @@
                                         <div class="card-body">
                                             <h5 class="card-title">Marie Curie</h5>
                                             <p class="card-text">Marie Curie (1867-1934) foi uma física e química
-                                                polonesa-francesa que se tornou a primeira mulher a receber um Prêmio
-                                                Nobel, em 1903, por suas descobertas sobre o radio. Ela foi a primeira
-                                                mulher a ser agraciada com o prêmio e a primeira pessoa a recebê-lo duas
-                                                vezes, em 1911, por sua pesquisa sobre a radioatividade.</p>
+                                                polonesa-francesa que se destacou por suas descobertas pioneiras no
+                                                campo da radioatividade. Sua contribuição mais significativa foi o
+                                                isolamento dos elementos radioativos rádio e polônio. Essas descobertas
+                                                revolucionaram a compreensão da radioatividade e suas aplicações,
+                                                impactando profundamente o mundo da ciência.
+                                            </p>
                                         </div>
                                     </div>
                                 </div>
@@ -117,12 +119,12 @@
                                         <img src="mulher2.jpg" class="card-img-top" style="height: 200px;" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Rose Parks</h5>
-                                            <p class="card-text">Rosa Parks (1913-2005) foi uma ativista dos direitos
-                                                civis americana que ficou famosa por sua resistência ao sistema de
-                                                segregação racial nos ônibus de Montgomery, Alabama. Sua decisão de não
-                                                ceder o seu assento para um homem branco em 1 de dezembro de 1955 foi o
-                                                início de um boicote aos ônibus de Montgomery, que pôs fim à segregação
-                                                racial nos ônibus em todo o país.</p>
+                                            <p class="card-text">Rosa Parks (1913-2005) é conhecida como uma
+                                                ativista pelos direitos civis nos Estados Unidos. Seu papel mais famoso
+                                                foi quando se recusou a ceder seu lugar no ônibus a um homem branco,
+                                                desencadeando o boicote aos ônibus de Montgomery. Ela é lembrada hoje
+                                                por sua coragem em desafiar a segregação racial e sua luta pelos
+                                                direitos civis.</p>
                                         </div>
                                     </div>
                                 </div>
@@ -131,11 +133,91 @@
                                         <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
                                         <div class="card-body">
                                             <h5 class="card-title">Malala Yousafzai</h5>
-                                            <p class="card-text">Malala Yousafzai (1997) é uma ativista paquistanesa que
-                                                luta pelo direito à educação de crianças e jovens. Ela tornou-se
-                                                conhecida após o ataque do Talibã na escola que frequentava, no qual
-                                                recebeu um tiro no rosto, ficando entre a vida e a morte. Malala é a
-                                                pessoa mais jovem a receber o Prêmio Nobel da Paz.</p>
+                                            <p class="card-text">Malala Yousafzai (1997) ganhou destaque como ativista pela educação, especialmente após sobreviver a um atentado e continuar a defender os direitos das meninas à educação. Sua influência se estendeu globalmente, inspirando movimentos e programas de apoio à educação feminina.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 mb-4">
+                                    <div class="card h-100">
+                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Frida Kahlo</h5>
+                                            <p class="card-text">Frida Kahlo foi uma artista mexicana conhecida por suas obras que exploravam temas como identidade, dor e feminismo. Suas pinturas, incluindo "Auto-retrato com Colar de Espinhos" e "As Duas Fridas", influenciaram profundamente o mundo da arte, introduzindo um estilo único e expressivo.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 mb-4">
+                                    <div class="card h-100">
+                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Coco Chanel</h5>
+                                            <p class="card-text">Coco Chanel foi uma estilista e empresária francesa que popularizou o uso de linhas simples e elegantes na moda, como o "little black dress". Sua influência na indústria da moda foi marcante, quebrando barreiras de gênero e estabelecendo padrões duradouros de elegância.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 mb-4">
+                                    <div class="card h-100">
+                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Amelia Earhart</h5>
+                                            <p class="card-text">Amelia Earhart foi uma aviadora americana pioneira, sendo a primeira mulher a voar sozinha sobre o Oceano Atlântico. Sua conquista inspirou mulheres a perseguir carreiras na aviação e em campos relacionados, contribuindo significativamente para o avanço das mulheres neste campo.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 mb-4">
+                                    <div class="card h-100">
+                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Jane Austen</h5>
+                                            <p class="card-text">Jane Austen foi uma escritora britânica conhecida por obras como "Orgulho e Preconceito" e "Razão e Sensibilidade", que exploravam temas sociais e românticos com personagens memoráveis. Sua influência na literatura se estende até os dias atuais.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 mb-4">
+                                    <div class="card h-100">
+                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Wangari Maathai</h5>
+                                            <p class="card-text">Wangari Maathai foi uma ambientalista queniana que liderou o movimento do Cinturão Verde e recebeu o Prêmio Nobel da Paz. Sua influência no movimento ambientalista se deu através da inspiração para ações de reflorestamento e conscientização sobre questões ambientais.</p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 mb-4">
+                                    <div class="card h-100">
+                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Indira Gandhi</h5>
+                                            <p class="card-text">Indira Gandhi serviu como primeira-ministra da Índia, implementando políticas sociais e econômicas significativas. Sua influência na política indiana foi marcante, desempenhando um papel crucial em reformas que moldaram o país.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 mb-4">
+                                    <div class="card h-100">
+                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Ada Lovelace</h5>
+                                            <p class="card-text">Ada Lovelace foi uma matemática britânica que escreveu o primeiro programa de computador e previu o potencial dos computadores além de cálculos matemáticos. Sua influência no campo da computação estabeleceu os fundamentos da programação de computadores.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 mb-4">
+                                    <div class="card h-100">
+                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Wangari Maathai</h5>
+                                            <p class="card-text">Simone de Beauvoir foi uma filósofa e escritora francesa conhecida por desafiar as normas sociais e de gênero, contribuindo para o desenvolvimento do existencialismo e do feminismo. Suas obras, como "A Segunda Sexa" e "Memórias de uma Moça Bem-Comportada", influenciaram profundamente a filosofia e a literatura.
+                                            </p>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-lg-4 mb-4">
+                                    <div class="card h-100">
+                                        <img src="mulher3.jpg" class="card-img-top" style="height: 200px;" alt="...">
+                                        <div class="card-body">
+                                            <h5 class="card-title">Valentina Tereshkova</h5>
+                                            <p class="card-text">Valentina Tereshkova foi a primeira mulher a viajar para o espaço, a bordo da missão Vostok 6. Sua influência na exploração espacial se deu ao inspirar mulheres a seguir carreiras neste campo e contribuir para o avanço da igualdade de gênero na exploração espacial.</p>
                                         </div>
                                     </div>
                                 </div>
