Descrição clara das mudanças realizadas

--- a/assets/html/end.html
+++ b/assets/html/end.html
@@ -20,17 +20,17 @@
             id="username"
             placeholder="username"
           />
-          <button
+          <button 
             type="submit"
-            class="btn"
+            class="btn" 
             id="saveScoreBtn"
             onclick="saveHighScore(event)"
             disabled
-          >
+          > 
             Salvar
           </button>
         </form>
-        <a id="go_home" class="btn" href="/">Home</a>
+        <a id="go_home" class="btn" href="quiz.html">Home</a>
       </div>
     </div>
     <script src="../js/end.js"></script>
