--- a/assets/html/highscores.html
+++ b/assets/html/highscores.html
@@ -13,7 +13,7 @@
       <div id="highscores" class="flex-center flex-column" style="color : rgb(255, 255, 255)">
         <h1 id="finalScore">Maiores Pontuações</h1>
         <ul id="highScoresList"></ul>
-        <a id="go_home" class="btn" href="../../index.html">Ir para Home</a>
+        <a id="go_home" class="btn" href="quiz.html">Ir para Home</a>
       </div>
     </div>
     <script src="../js/highscores.js"></script>
